# radio-cli

./: .gitignore  README.md  install.sh  main.py  pyproject.toml  requirements.txt
examples/: playlist_import_sample.txt  vietnam_chill_10.csv  vietnam_happy_10.csv
radio_cli/: __init__.py  audio_hub.py  autoplay.py  cli.py  config.py  data_io.py  display.py  favorites.py  history.py  logging_config.py  mpv_ipc.py  player.py  player_settings.py  playlist_store.py  premium.py  queue_store.py  search.py  station_validation.py  stations.py  tui.py  url_utils.py  ytdlp_util.py
radio_cli/data/: stations.json
tests/: test_audio_hub.py  test_autoplay.py  test_data_io.py  test_history.py  test_player_lock.py  test_player_settings.py  test_player_stop.py  test_playlist_store.py  test_premium.py  test_queue_store.py  test_search.py  test_station_validation.py  test_stations.py  test_tui.py  test_url_utils.py  test_ytdlp_util.py
