[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "radio-cli"
version = "0.6.0"
description = "CLI nghe radio Việt Nam và V-Pop trên Linux, macOS và Windows"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "radio-cli contributors" }]
keywords = ["radio", "cli", "mpv", "youtube", "vpop"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "textual>=0.89.0",
    "yt-dlp>=2025.1.0",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
    "twine>=5.0",
]

[project.scripts]
radio = "radio_cli.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["radio_cli*"]

[tool.setuptools.package-data]
radio_cli = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
ignore_missing_imports = true
